Actions
Bug #12603
closedgpio_87317: smatch and NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors on SPARC with NULL pointer:
../../sun4u/io/gpio_87317.c: In function 'gpio_attach': ../../sun4u/io/gpio_87317.c:260: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast ../../common/sys/sunddi.h:1571: note: expected 'int' but argument is of type 'void *' /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../sun4u/io/gpio_87317.c:215 gpio_attach() warn: if statement not indented /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../sun4u/io/gpio_87317.c:227 gpio_attach() warn: if statement not indented
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 9ddb26a06d595789532ca2be60f2625a035e5baa
commit 9ddb26a06d595789532ca2be60f2625a035e5baa Author: Toomas Soome <tsoome@me.com> Date: 2020-05-10T07:00:55.000Z 12603 gpio_87317: smatch and NULL pointer errors Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: Yuri Pankov <ypankov@fastmail.com> Reviewed by: Alexander Pyhalov <apyhalov@gmail.com> Approved by: Gordon Ross <gordon.w.ross@gmail.com>
Actions