12603 gpio_87317: smatch and NULL pointer errors Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: Yuri Pankov <ypankov@fastmail.com> Reviewed by: Alexander Pyhalov <apyhalov@gmail.com> Approved by: Gordon Ross <gordon.w.ross@gmail.com>